syntax = "proto3";
option go_package = "model/";
//package GrpcMicroservice;

service SocialGrpc {
  // rpc Chkauth(JwtdataInput) returns (Authd) {}
  rpc GetPosts(GetPost) returns (MongoFields) {}
  // rpc SignIn(UsrsigninInput) returns (Jwtdata) {}
  // rpc SignUp(NewUserDataInput) returns (Jwtdata) {}
  // rpc LikeComment(SendLikeInput) returns (MongoFields) {}
  // rpc ReplyComment(ReplyCommentInput) returns (MongoFields) {}
  // rpc NewComment(SendCmtInput)returns (MongoFields) {}
  // rpc PostFile(Upload) returns (MongoFields) {} 
}


message GetPost {
	string Username = 1 ;
	string RequestType = 2 ;
	string SearchTerm = 3 ;
}

message Authd  {
	string AuthdUser = 1 ;
}

message Claims  {
	string Username = 1 ; 
}

message GetUserCmts  {
	string Page = 1 ;
	string Username = 2 ; 
}

message Jwtdata  {
	string Token = 1 ;
}

message JwtdataInput  {
	string Token = 1 ; 
}

message Likes  {
	string Username = 1 ;
	string Profpic = 2 ; 
}

message ReplyData{
	string Username = 1 ;
	string PostID = 2 ;
	string ReplyID = 3 ;
}

message LikedData{
	string Username = 1 ;
	string PostID = 2 ;
}

message MongoFields  { 	 
	string Username = 1 ;  
	string Bio = 2 ; 
	string Profpic = 3 ; 
	repeated string Photos = 4 ;
	repeated string Following = 5 ;  
	repeated string Followers = 6 ;
	repeated ReplyData Replys = 7 ;
	repeated LikedData Liked = 8 ; 
	repeated PostData Posts = 9 ; 
	// int32 LastCommentNum = 10 ;
}

message MsgCmts  {
	string ID = 1 ;
	string Username = 2 ;
	string Comment = 3 ; 
	string Profpic = 4 ;
}

message MutationInput  {
	string Name = 1 ; 
	string ID = 2;
}

message NewUserDataInput  {
	string Username = 1 ; 
	string Password = 2 ;
	string DOB = 3 ;
	string Email = 4 ;
	string Mobile = 5 ;
	string OTP_Email = 6 ;
	string OTP_Mobile = 7 ;
	string RequestType = 8 ;
}

message PostData  {
	string ID = 1 ;
	string Username = 2 ; 
	string MainCmt = 3 ; 
	int64 TimeStamp = 4 ; 
	repeated MsgCmts Comments = 5 ; //    []MsgCmts `bson:"Comments" json:"Comments"`
	repeated Likes Likes = 6 ; //   []Likes   `bson:"Likes" json:"Likes"`
}

message ReplyCommentInput  {
	string AuthorUsername = 1 ; 
	string ReplyUsername = 2 ; 
	string ReplyComment = 3 ; 
	string ReplyProfpic = 4 ; 
	string PostID = 5 ;  
	string ReturnPage = 6 ;
}

message SendCmtInput  {
	string Username = 1 ; 
	string SessionUser = 2 ;
	string MainCmt = 3 ; 
	string Time = 4 ;
	int64 TimeStamp = 5 ;   
	string Date = 6 ; 
	string ReturnPage = 7 ;  
}

message SendLikeInput  {
	string Username = 1 ; 
	string LikedBy = 2 ; 
	string LikeByPic = 3 ;  
	string PostID = 4 ;   
	string ReturnPage = 5 ; 
}

message Usrsignin  {
	string Username = 1 ;
	string Password = 2 ;
	string Email = 3 ; 
	string Bio = 4 ; 
	repeated string Photos = 5 ;
	int32 LastCommentNum = 6 ;
	repeated PostData Posts = 7 ;
}

message UsrsigninInput  {
	string Username = 1 ; 
	string Password = 2 ;
}
